# Rust-project

./: .gitignore  git.txt  关于hacker这条路.md  新建 文本文档.txt
Gui/: 技术选型-总体.md
Gui/egui/: 优化选项.txt
Gui/slint/: slint教程.md
Gui/tauri-vue-example/: reademe.md
Rust/: 配置环境-debug等.md
RustRedOps/: 3件套重构思考.md  OpSec roadmap.txt  PE.md  windows x64程序启动加载.md  临时思考待整理.txt  为什么要有红队和0day.md  免杀技术栈.md  关于汇编.txt  对于ntapi,问其原型,其内存布局,rust表示方式.txt
RustRedOps/AV EDR原理/: hook.md  签名.md
RustRedOps/Assembly/: 关于cpu.md
RustRedOps/Windbg/: 实战.md
RustRedOps/Windows Internals/: Chapter 5-Memory management.md  Chapter-1-Concepts and tools.md  Chapter-8 System Mechanisms .md
RustRedOps/dinvk/: Cargo.toml  PE.md  README.md  create_doc.ps1  roadmap.md
RustRedOps/my-dinvk/: Cargo.toml
RustRedOps/puerto/: Cargo.toml  get_forwarded_address未完成.md  readme.md  旧hash函数.md  未完成.md
RustRedOps/shadow/: Cargo.toml
RustRedOps/uwd/: 新建 文本文档.md
RustRedOps/win64中的汇编/: 栈-影子空间-序言-尾声.md  汇编指令及寄存器.md  返回地址.md
RustRedOps/windows registry/: 基础.md
RustRedOps/三件套/: 3件套重构思考.md  三件套重构注意事项.md  各文件夹归档内容类型.txt
RustRedOps/三件套/hypnus-samoa/samoa/: Cargo.toml  implementation_plan.md
RustRedOps/三件套/hypnus-samoa/samoa/hypnus-samoa源码解析/: allocator.md  cfg.md  gadget.md  hypnus.md  hypnus整体分析.md  spoof.md  types.md
RustRedOps/三件套/hypnus-samoa/samoa/src/: allocator.rs  cfg.rs  config.rs  error.rs  gadget.rs  hypnus.rs  lib.rs  spoof.rs  types.rs  winapis.rs
RustRedOps/基础知识及工具及路线/: PEB详解.md  关于汇编及红队工具.md
RustRedOps/涉及的Rust Grammar/: alloc memory.md
RustRedOps/背景知识及工具及路线/: PEB and PE.md  rust grammer.md  syscall相关.md  windows x64程序启动加载.md  免杀技术栈及工具.md  免杀技术栈及工具及思路.md
penetrate/: 仅有IP的思路.txt  针对网关设备.txt
seaorm/: Cargo.toml
seaorm/src/: main.rs  (+1 more)
vscode/: my_vscode_extensions.txt  settings.json
windows-sys/wlan/: Cargo.toml
历史版本rustup/: 新建 文本文档.txt
数据库/: 当前技术选型.txt
数据库/xlsx-slx/: .gitignore  Cargo.toml  ReadeMe.md  ai.txt  code.txt  数据库表结构.txt  数据清洗和分析工具.md
数据库/xlsx-slx/examples/: detect_cell_type.rs  old.rs  path_walkdir.rs
数据库/xlsx-slx/src/: error.rs  main.rs  models.rs
跨平台方案/: 技术选型-AssetTracing项目.md  跨平台app的技术选型.md  针对win7等旧系统.md
(+171 files in other folders)
