[package]
name = "xlsx-slx"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] } # 开启 chrono 特性
calamine = "0.31" # 或最新版
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }